<?xml version="1.0"?>
<package format="3">
  <name>ros2_monitor_srvs</name>
  <version>0.0.0</version>
  <description>Custom service definitions for ROS2 Monitor</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package> 